@@ -3,41 +3,41 @@ import org.gradle.api.JavaVersion
 plugins {
     id 'groovy'
     id 'java'
-    id 'pl.allegro.tech.build.axion-release' version '1.13.4'
-    id 'maven-publish'
+    id 'pl.allegro.tech.build.axion-release' version '1.17.2'
+    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
 }
 
-group 'com.rundeck.plugin'
+group 'org.rundeck.plugins'
 
-ext.rundeckVersion='5.14.0-rc1-20250722'
+ext.publishName = "jq Json Log Filter ${project.version}"
+ext.githubSlug = 'rundeck-plugins/jq-json-logfilter'
+ext.developers = [
+        [id: 'gschueler', name: 'Greg Schueler', email: 'greg@rundeck.com']
+]
+
+scmVersion {
+    ignoreUncommittedChanges = false
+    tag {
+        prefix = ''           // NO "v" prefix - see PLUGIN_TAGGING_ARCHITECTURE.md
+        versionSeparator = ''
+    }
+}
+
+ext.rundeckVersion='6.0.0-alpha1-20260407'
 defaultTasks 'clean','build'
 apply plugin: 'java'
 apply plugin: 'idea'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+    withSourcesJar()
+    withJavadocJar()
 }
 
 ext.rundeckPluginVersion= '1.2'
 
-scmVersion {
-    ignoreUncommittedChanges = false
-    tag {
-        prefix = ''
-        versionSeparator = ''
-        def origDeserialize=deserialize
-        //apend .0 to satisfy semver if the tag version is only X.Y
-        deserialize = { config, position, tagName ->
-            def orig = origDeserialize(config, position, tagName)
-            if (orig.split('\\.').length < 3) {
-                orig += ".0"
-            }
-            orig
-        }
-    }
-}
-project.version = scmVersion.version
+version = scmVersion.version  // Dynamic version from git tag
 
 /**
  * Set this to a comma-separated list of full classnames of your implemented Rundeck
@@ -48,6 +48,15 @@ ext.pluginClassNames='com.rundeck.plugins.logging.JsonLogFilter'
 
 repositories {
     mavenLocal()
+    maven {
+        name = 'Central Portal Snapshots'
+        url = 'https://central.sonatype.com/repository/maven-snapshots/'
+        
+        // Only search this repository for org.rundeck snapshots
+        content {
+            includeGroup('org.rundeck')
+        }
+    }
     mavenCentral()
 }
 
@@ -63,26 +72,29 @@ configurations{
 
 
 dependencies {
-    implementation 'org.codehaus.groovy:groovy-all:3.0.19'
+    implementation 'org.apache.groovy:groovy-all:4.0.29'
 
-    implementation group: 'org.rundeck', name: 'rundeck-core', version: rundeckVersion
-    
+    compileOnly group: 'org.rundeck', name: 'rundeck-core', version: rundeckVersion
+    testImplementation group: 'org.rundeck', name: 'rundeck-core', version: rundeckVersion
+
     // Add secure commons-lang3 to provide alternative to vulnerable commons-lang 2.6
-    implementation 'org.apache.commons:commons-lang3:3.18.0'
+    implementation 'org.apache.commons:commons-lang3:3.20.0'
 
     pluginLibs (group: 'net.thisptr', name: 'jackson-jq', version: '1.0.0-preview.20230409') {
        exclude group: "com.fasterxml.jackson.core"
     }
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
-    testImplementation "org.spockframework:spock-core:2.0-groovy-3.0"
+    testImplementation "org.spockframework:spock-core:2.4-groovy-4.0"
+    testImplementation "cglib:cglib-nodep:3.3.0"
+    testImplementation 'org.objenesis:objenesis:1.4'
 }
 
 configurations.all {
     resolutionStrategy {
         // Replace vulnerable commons-lang with secure commons-lang3
         dependencySubstitution {
-            substitute module('commons-lang:commons-lang') using module('org.apache.commons:commons-lang3:3.18.0')
+            substitute module('commons-lang:commons-lang') using module('org.apache.commons:commons-lang3:3.17.0')
         }
     }
 }
@@ -96,6 +108,13 @@ task copyToLib(type: Copy) {
 
 tasks.withType(Test).configureEach {
     useJUnitPlatform()
+    
+    // Java 17+ module access
+    jvmArgs = [
+        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+        '--add-opens=java.base/java.util=ALL-UNNAMED',
+        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+    ]
 }
 
 jar {
@@ -120,11 +139,14 @@ jar {
 //set jar task to depend on copyToLib
 jar.dependsOn(copyToLib)
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            artifactId = 'jq-json-logfilter'
-            from components.java
+nexusPublishing {
+    packageGroup = 'org.rundeck.plugins'
+    repositories {
+        sonatype {
+            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
         }
     }
 }
+
+apply from: "${rootDir}/gradle/publishing.gradle"
